Clean up Dockerfile